--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -6,7 +6,7 @@ runnable=true
 custom_features=""
 export_filter="all_resources"
 include_filter=""
-exclude_filter="*.aseprite, *.ceol, assets/promo/*, .github/*, .gitignore, README.md, todo.gd"
+exclude_filter="*.aseprite, *.ceol, addons/godot-reset/* assets/promo/*, .github/*, .gitignore, README.md, todo.gd"
 export_path=""
 patch_list=PoolStringArray(  )
 script_export_mode=1
@@ -29,7 +29,7 @@ runnable=true
 custom_features=""
 export_filter="all_resources"
 include_filter=""
-exclude_filter="*.aseprite, *.ceol, assets/promo/*, .github/*, .gitignore, README.md, todo.gd"
+exclude_filter="*.aseprite, *.ceol, addons/godot-reset/*, addons/godot-reset/* assets/promo/*, .github/*, .gitignore, README.md, todo.gd"
 export_path=""
 patch_list=PoolStringArray(  )
 script_export_mode=1
@@ -62,8 +62,8 @@ runnable=true
 custom_features=""
 export_filter="all_resources"
 include_filter=""
-exclude_filter="*.aseprite, *.ceol, assets/promo/*, .github/*, .gitignore, README.md, todo.gd"
-export_path=""
+exclude_filter="*.aseprite, *.ceol, addons/godot-reset/*, assets/promo/*, .github/*, .gitignore, README.md, todo.gd"
+export_path="../../../../Desktop/uhhh-helm.exe"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -76,7 +76,7 @@ texture_format/etc=false
 texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
 binary_format/64_bits=true
-binary_format/embed_pck=false
+binary_format/embed_pck=true
 custom_template/release=""
 custom_template/debug=""
 codesign/enable=false
@@ -105,7 +105,7 @@ runnable=true
 custom_features=""
 export_filter="all_resources"
 include_filter=""
-exclude_filter="*.aseprite, *.ceol, assets/promo/*, .github/*, .gitignore, README.md, todo.gd"
+exclude_filter="*.aseprite, *.ceol, addons/godot-reset/*, assets/promo/*, .github/*, .gitignore, README.md, todo.gd"
 export_path=""
 patch_list=PoolStringArray(  )
 script_export_mode=1
