Export text files on build

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -5,7 +5,7 @@ platform="HTML5"
 runnable=true
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="*.txt"
 exclude_filter="*.aseprite, *.ceol, addons/godot-reset/* assets/promo/*, .github/*, .gitignore, README.md, todo.gd"
 export_path=""
 patch_list=PoolStringArray(  )
@@ -28,7 +28,7 @@ platform="Mac OSX"
 runnable=true
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="*.txt"
 exclude_filter="*.aseprite, *.ceol, addons/godot-reset/*, addons/godot-reset/* assets/promo/*, .github/*, .gitignore, README.md, todo.gd"
 export_path=""
 patch_list=PoolStringArray(  )
@@ -61,9 +61,9 @@ platform="Windows Desktop"
 runnable=true
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="*.txt"
 exclude_filter="*.aseprite, *.ceol, addons/godot-reset/*, assets/promo/*, .github/*, .gitignore, README.md, todo.gd"
-export_path="../../../../Desktop/uhhh-helm.exe"
+export_path="C:/Users/velop/Desktop/uhhh-helm.exe"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -104,7 +104,7 @@ platform="Linux/X11"
 runnable=true
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="*.txt"
 exclude_filter="*.aseprite, *.ceol, addons/godot-reset/*, assets/promo/*, .github/*, .gitignore, README.md, todo.gd"
 export_path=""
 patch_list=PoolStringArray(  )
