--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter="*.aseprite, *.ceol, assets/promo/*, .github/*, .gitignore, README.md, todo.gd"
-export_path=""
+export_path="../.html"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -61,9 +61,9 @@ platform="Windows Desktop"
 runnable=true
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="*.txt"
 exclude_filter="*.aseprite, *.ceol, assets/promo/*, .github/*, .gitignore, README.md, todo.gd"
-export_path=""
+export_path="../../.exe"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
